language/move-lang/tests/move_check/typing/constraints_not_satisfied_function_parameter.exp
error: 

   ┌── tests/move_check/typing/constraints_not_satisfied_function_parameter.move:5:16 ───
   │
 5 │     fun foo(x: CupC<R>) {}
   │                ^^^^^^^ 'copy' constraint not satisifed
   ·
 5 │     fun foo(x: CupC<R>) {}
   │                     - The type '0x8675309::M::R' does not have the ability 'copy'
   ·
 3 │     struct R {}
   │            - To satisify the constraint, the 'copy' ability would need to be added here
   ·
 2 │     struct CupC<T: copy> {}
   │                    ---- 'copy' constraint declared here
   │

