language/move-lang/tests/move_check/typing/constraints_not_satisfied_function_parameter.move
module M {
    struct CupC<T: copy> {}
    struct R {}

    fun foo(x: CupC<R>) {}
}
